--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -12,4 +12,4 @@ jobs:
           source_repo: 'https://github.com/TBXark/ChatGPT-Telegram-Workers'
           target_repo: 'https://github.com/caozhengi/ChatGPT-Telegram-Workers'
           github_token: ${{ secrets.GITHUB_TOKEN }} 
-          source_branch: 'master'
+          source_branch: 'main'
